# pdf-docx-to-markdown

./: .gitignore  CONVERT_DOCS.bat  README.md  pdf_docx_to_markdown.py  pyproject.toml  requirements_extract.txt  requirements_lock.txt
.github/workflows/: ci.yml
tests/: test_cli.py  test_conversion.py  test_helpers.py
